--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name : workflow
+name: workflow
 
 on:
   push:
-      branches:
-        -main
-      paths-ignore:
-        - 'README.md'
+    branches:
+      - main
+    paths-ignore:
+      - 'README.md'
 
 permissions:
   id-token: write
@@ -37,13 +37,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq unzip
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID}}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{secrets.AWS_DEFAULT_REGION}}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
@@ -54,19 +53,18 @@ jobs:
         env:
           IMAGE_TAG: latest
         run: |
-          # Build a docker container and 
-          # push it to ECR so that it can 
-          # be deployed to ECS
-          docker build -t ${{ secrets.AWS_ECR_REPO_URI}}:$ IMAGE_TAG .
-          docker push ${{secrets.AWS_ECR_REPO_URI}}:$IMAGE_TAG
-
-
-  continuous-deployment:
-    name: Continuous Deployment
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG .
+          docker push ${{ secrets.AWS_ECR_REPO_URI }}:$IMAGE_TAG
+          
+          
+  Continuous-Deployment:
     needs: build-and-push-ecr-image
     runs-on: self-hosted
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
@@ -74,30 +72,25 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION}}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
+      
+      
       - name: Pull latest images
         run: |
-          docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
-
-      #- name: Stop and remove old container if running
-        #run: |
-          #if [ "$(docker ps -q -f name=sensor)" ]; then
-            #docker stop sensor && docker rm -f sensor
-          #fi
-
+         docker pull ${{ secrets.AWS_ECR_REPO_URI }}:latest
+         
+                
+      # - name: Stop and remove visibility container if running
+      #   run: |
+      #    docker ps -q --filter "name=visibility" | grep -q . && docker stop visibility && docker rm -fv visibility
       - name: Run Docker Image to serve users
         run: |
-          docker run -d -p 8080:8080 --name=sensor \
-            -e MONGO_DB_URL=${{ secrets.MONGO_DB_URL }} \
-            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            ${{ secrets.AWS_ECR_REPO_URI }}:latest
+         docker run -d -p 8080:8080 --name=sensor -e 'MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}' -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}' ${{ secrets.AWS_ECR_REPO_URI }}:latest
 
       - name: Clean previous images and containers
         run: |
-          docker system prune -f 
+         docker system prune -f
